implemented user registeration functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port =8081
 spring.profiles.active=dev
+
+#Actuator
+management.endpoints.jmx.exposure.include=health,metrics,info,env,beans,configprops
+management.endpoints.web.exposure.include=health,metrics,info,env,beans,configprops
