--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,23 @@
 server.port =8081
-spring.profiles.active=dev
+spring.profiles.active=local
 
-#Actuator
-management.endpoints.jmx.exposure.include=health,metrics,info,env,beans,configprops
-management.endpoints.web.exposure.include=health,metrics,info,env,beans,configprops
+
+
+
+#management.endpoints.web.base-path=/actuator
+# Enable H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Ensure the database URL matches your configuration
+#spring.datasource.url=jdbc:h2:file:~/h2db/psdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Log SQL for debugging
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
